# org-boy

./: .gitignore  conf.py  main.py  pyproject.toml  register.py  utils.py
src/: emoji_utils.py  main.py  paths.py  proc_utils.py  registered_chats
src/data/assets/: tier-list.md
